--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.0.77
+=========================
+
+-------
+Cleanup
+-------
+
+- Adjustments to RTF output formatting, by
+  Simon Kornblith.
+
+
+=========================
 Changes in version 1.0.76
 =========================
 
