--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,19 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.0.81
+=========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Yet more fixes to locale selection behavior.
+  Use en-US if calling application requests an
+  unknown style.
+
+
+=========================
 Changes in version 1.0.80
 =========================
 
