--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.0.91
+=========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Set circa rather than fuzzy on uncertain date
+  objects in the internal human-readable dates parser.
+
+
+=========================
 Changes in version 1.0.90
 =========================
 
