--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,17 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
+==========================
+Changes in version 1.0.100
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Add heuristic code to identify Vietnamese names,
+  and make it optional.
+
+
 =========================
 Changes in version 1.0.99
 =========================
