--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,20 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.109
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Use numeric rather than named entities when producing
+  HTML, to avoid error if the output is processed as
+  XML in an environment in which named entities have
+  not been declared.
+
+
+==========================
 Changes in version 1.0.108
 ==========================
 
