--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,19 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.112
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Avoid carrying year-suffix forward to a following 
+  reference when performing position-sensitive
+  citation updates.
+
+
+==========================
 Changes in version 1.0.111
 ==========================
 
